feat: 레포지토리 설계 및 구현
- 서비스 구현체 분석, 비즈니스 로직과 저장 로직 식별
- repository.jcf 생성 후 테스트
- repository.file 생성 후 테스트